[package]
name = "duners"
version = "0.0.2"
authors = ["Ben Smith <bh2smith@gmail.com>"]
edition = "2021"
description = "A simple framework for fetching query results from with [Dune Analytics API](https://dune.com/docs/api/)."
documentation = "https://docs.rs/duners"
readme = "README.md"
repository = "https://github.com/bh2smith/duners/"
license = "MIT OR Apache-2.0"
keywords = ["dune", "ethereum", "api-client", "web3", "dune-analytics"]

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"
tokio = { version = "1.34.0", features = ["full"] }
