[package]
name = "duners"
version = "0.0.2"
authors = ["Ben Smith <bh2smith@gmail.com>"]
edition = "2021"
description = "A simple framework for fetching query results from with [Dune Analytics API](https://dune.com/docs/api/)."
documentation = "https://docs.rs/duners"
readme = "README.md"
repository = "https://github.com/bh2smith/duners/"
license = "MIT OR Apache-2.0"
keywords = ["dune", "ethereum", "api-client", "web3", "dune-analytics"]

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.21"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_with = "3.7.0"
tokio = { version = "1.37.0", features = ["full"] }
